[gd_scene load_steps=2 format=3 uid="uid://b7k5bpoktb5et"]

[ext_resource type="Script" path="res://parameter_item.gd" id="1_xq30i"]

[node name="parameter_item" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_xq30i")

[node name="NameEdit" type="LineEdit" parent="."]
layout_mode = 2
expand_to_text_length = true

[node name="ValueEdit" type="LineEdit" parent="."]
layout_mode = 2
expand_to_text_length = true

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
text = " ðŸ—‘ "
